# tui_editor

./: .gitattributes  Cargo.toml  Makefile  README.md  install.ps1  install.sh  rustfmt.toml
.github/workflows/: ci.yml
src/: app.rs  editor.rs  file_explorer.rs  highlight.rs  main.rs  ui.rs
